--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,27 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <!-- For the resting Spinner style -->
+        <item name="android:spinnerItemStyle">
+            @style/spinnerItemStyle
+        </item>
+
+        <!-- For each individual Spinner list item once clicked on -->
+        <item name="android:spinnerDropDownItemStyle">
+            @style/spinnerDropDownItemStyle
+        </item>
+
     </style>
 
-</resources>
+    <style name="spinnerItemStyle">
+        <item name="android:padding">5dp</item>
+         <item name="android:textSize">13sp</item>
+     </style>
+
+     <style name="spinnerDropDownItemStyle">
+         <item name="android:padding">10dp</item>
+         <item name="android:textSize">14sp</item>
+     </style>
+
+ </resources>
