--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,17 +10,55 @@
         android:orientation="vertical"
         tools:context="shubh.dynamiclistview.MainActivity">
 
-        <Spinner
-            android:id="@+id/spinner"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
+            <com.androidtrip.plugins.searchablespinner.SearchableSpinner
+                android:id="@+id/SearchableSpinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:paddingRight="0dp"
+                android:layout_weight="1"/>
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="+" />
+
+    </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Tafel: "
+                android:layout_weight="1"/>
+
+            <EditText
+                android:id="@+id/tafel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="numberDecimal"
+                android:text=""
+                android:layout_weight="1"/>
+
+        </LinearLayout>
         <Button
-            android:id="@+id/button"
+            android:id="@+id/button3"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Add" />
-
+            android:text="Delete" />
         <Button
             android:id="@+id/button1"
             android:layout_width="fill_parent"
@@ -43,11 +81,12 @@
         <ListView
             android:id="@+id/listView1"
             android:layout_width="match_parent"
-            android:layout_height="250dp" />
+            android:layout_height="2500dp" />
 
         <ImageView
             android:id="@+id/ivReceipt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
     </LinearLayout>
 </ScrollView>
