--- a/printooth/src/main/res/layout/bluetooth_device_row.xml
+++ b/printooth/src/main/res/layout/bluetooth_device_row.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="8dp">
 
     <TextView
@@ -25,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_toStartOf="@id/pairStatus"
-        android:src="@drawable/ic_print_black_24dp" />
+        app:srcCompat="@drawable/ic_print_black_24dp" />
 
 
 </RelativeLayout>
